--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,10 @@
   margin-top: 10px;
 }
 .search-input {
-  width: 450px;
   margin: auto;
 }
 .user-profile {
   margin: auto;
-  width: 450px;
 }
 .card-header {
   text-align: center;
@@ -21,5 +19,14 @@
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-
+}
+.user-picture-layout {
+  width: 25%;
+}
+.user-picture {
+  width: 25%;
+  border-radius: 50%;
+}
+.users-list {
+  margin-top: 10px;
 }
